bdr.BDR.scala.error
Erreur de compilation :
BDR:19: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message = "I")
                   ^