bdr.BDR.scala.code
var fini = 0
while (fini != 1)
{
  var message = litMessage()
  if (message == "")
  {
    fini = 1
  }
  else if (message == "R")
  {
    droite()
    avance()
  }
  else if (message == "L")
  {
    gauche()
    avance()
  }
  else if (message = "I")
  {
    gauche()
    gauche()
    avance()
  }
  else if (message == "A")
  	avance()
  else if (message == "B")
  {
    avance()
    avance()
  }
  else if (message == "C")
  {
    avance()
    avance()
    avance()
  }
  else if (message == "Z")
  	recule()
  else if (message == "Y")
  {
    recule()
    recule()
  }
  else if (message == "X")
  {
    recule()
    recule()
    recule()
  }
}